# HexapodProject

./: .dockerignore  .gitignore  Dockerfile  README.md  swing_position.py
docker/: entrypoint.sh
docs/: architecture.md
hexapod_ws/: README.md
hexapod_ws/docs/: architecture.md
hexapod_ws/src/: README.md
hexapod_ws/src/hexapod_bringup/: README.md  package.xml  setup.cfg  setup.py
hexapod_ws/src/hexapod_bringup/config/: bringup.yaml
hexapod_ws/src/hexapod_bringup/hexapod_bringup/: __init__.py
hexapod_ws/src/hexapod_bringup/launch/: bringup.launch.py
hexapod_ws/src/hexapod_bringup/resource/: hexapod_bringup
hexapod_ws/src/hexapod_control/: README.md  package.xml  setup.cfg  setup.py
hexapod_ws/src/hexapod_control/config/: control.yaml
hexapod_ws/src/hexapod_control/hexapod_control/: __init__.py  gait_controller_node.py  inverse_kinematics_node.py
hexapod_ws/src/hexapod_control/resource/: hexapod_control
hexapod_ws/src/hexapod_description/: CMakeLists.txt  README.md  package.xml
hexapod_ws/src/hexapod_description/rviz/: hexapod.rviz
hexapod_ws/src/hexapod_description/urdf/: hexapod.urdf.xacro
hexapod_ws/src/hexapod_hardware/: README.md  package.xml  setup.cfg  setup.py
hexapod_ws/src/hexapod_hardware/config/: hardware.yaml
hexapod_ws/src/hexapod_hardware/hexapod_hardware/: __init__.py  servo_driver_node.py
hexapod_ws/src/hexapod_hardware/resource/: hexapod_hardware
hexapod_ws/src/hexapod_interfaces/: CMakeLists.txt  README.md  package.xml
hexapod_ws/src/hexapod_interfaces/msg/: HexapodJointState.msg  HexapodLegCommand.msg
hexapod_ws/src/hexapod_sensors/: README.md  package.xml  setup.cfg  setup.py
hexapod_ws/src/hexapod_sensors/config/: sensors.yaml
hexapod_ws/src/hexapod_sensors/hexapod_sensors/: __init__.py  camera_node.py  imu_node.py  state_estimator_node.py
hexapod_ws/src/hexapod_sensors/resource/: hexapod_sensors
hexapod_ws/src/hexapod_teleop/: README.md  package.xml  setup.cfg  setup.py
hexapod_ws/src/hexapod_teleop/config/: teleop.yaml
hexapod_ws/src/hexapod_teleop/hexapod_teleop/: __init__.py  teleop_node.py
hexapod_ws/src/hexapod_teleop/resource/: hexapod_teleop
