<?xml version="1.0"?>
<package format="3">
  <name>hexapod_description</name>
  <version>0.1.0</version>
  <description>URDF/Xacro and visualization assets for the hexapod.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export/>
</package>
