<?xml version="1.0"?>
<package format="3">
  <name>hexapod_sensors</name>
  <version>0.1.0</version>
  <description>Sensor drivers and state aggregation package.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
